fix: svg size being too large on mobile, header font uses google fonts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Literata&display=swap');
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -62,21 +64,6 @@
 
   --dishes-displayed: 8;
   --desserts-displayed: 4;
-}
-
-@font-face {
-  font-family: "Literata";
-  src: url("/fonts/Literata-VariableFont_opsz,wght.ttf") format("truetype supports variations"),
-    url("/fonts/Literata-VariableFont_opsz,wght.ttf") format("truetype-variations");
-  font-weight: 200 900;
-}
-
-@font-face {
-  font-family: "Literata";
-  font-style: italic;
-  src: url("/fonts/Literata-Italic-VariableFont_opsz,wght.ttf") format("truetype supports variations"),
-    url("/fonts/Literata-Italic-VariableFont_opsz,wght.ttf") format("truetype-variations");
-  font-weight: 200 900;
 }
 
 html {
